--- a/templates/dashboard/appointment/not_vistied.html
+++ b/templates/dashboard/appointment/not_vistied.html
@@ -10,30 +10,34 @@
             <thead>
             <tr>
                 <th>#</th>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Username</th>
+                <th>Name</th>
+                <th>Phone Number</th>
+                <th>Age</th>
+                <th>Time</th>
+                <th class="col-md-3 col-xs-1">Actions</th>
             </tr>
             </thead>
             <tbody>
+            {% for object in object_list %}
             <tr>
-                <td>1</td>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
+                <td>{{ forloop.counter }}</td>
+                <td>{{ object.patient.patient_data.name }}</td>
+                <td>{{ object.patient.phone }}</td>
+
+                <td>{{ object.patient.patient_data.age }}</td>
+                <td>{{ object.appointment_time }}</td>
+                <td class="col-md-3 col-xs-1">
+                    <a class="btn btn-outline-success" href="#">
+                        <i class="fa fa-clipboard"> Record </i>
+                    </a>
+                    <a class="btn btn-outline-primary" href="#">
+                        <i class="fa fa-plus-square-o" aria-hidden="true"> Add Record</i>
+                    </a>
+
+                </td>
             </tr>
-            <tr>
-                <td>2</td>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>Larry</td>
-                <td>the Bird</td>
-                <td>@twitter</td>
-            </tr>
+            {% endfor  %}
+
             </tbody>
         </table>
     </div>
