--- a/templates/dashboard/profile/profile.html
+++ b/templates/dashboard/profile/profile.html
@@ -1,56 +1,97 @@
 {% extends "dashboard/dashboard.html" %}
 {% load static %}
+{% load crispy_forms_tags %}
+
 {% block extra_css  %}
-    <link rel="stylesheet" type="text/css" href="{% static 'doctor/css/profile.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'doctor/css/profile.css' %}" xmlns="http://www.w3.org/1999/html">
 {% endblock extra_css %}
 
 {% block body  %}
+<form id="application_form" action="" enctype="multipart/form-data" class="form-register" method="POST"
+      accept-charset="UTF-8"
+      data-upazila-url={% url 'load_upazila' %} data-district-url={% url 'load_district' %}>
+{% csrf_token %}
 <div class="col-md-12">
-<div class="container rounded bg-white mt-5 mb-5">
-    <div class="row">
-        <div class="col-md-3 border-right">
-            <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQF2psCzfbB611rnUhxgMi-lc2oB78ykqDGYb4v83xQ1pAbhPiB&usqp=CAU"><span class="font-weight-bold">Amelly</span><span class="text-black-50">amelly12@bbb.com</span><span> </span></div>
-        </div>
-        <div class="col-md-5 border-right">
-            <div class="p-3 py-5">
-                <div class="d-flex justify-content-between align-items-center mb-3">
-                    <h4 class="text-right">Profile Settings</h4>
+    <div class="container rounded bg-white mt-5 mb-5">
+        <div class="row">
+
+            <div class="col-md-3 border-right">
+                <div class="d-flex flex-column align-items-center text-center p-3 py-5">
+                    <img id="imagePreview" class="rounded-circle mt-5 col-12" src="{{ object.picture.url }}">
+                    <span class="font-weight-bold">{{ object.name }}</span>
+                    <span class="text-black-50">{{ object.user }}</span>
                 </div>
-                <div class="row mt-2">
-                    <div class="col-md-6"><label class="labels">Name</label><input type="text" class="form-control" placeholder="first name" value=""></div>
-                    <div class="col-md-6"><label class="labels">Surname</label><input type="text" class="form-control" value="" placeholder="surname"></div>
-                </div>
-                <div class="row mt-3">
-                    <div class="col-md-12"><label class="labels">PhoneNumber</label><input type="text" class="form-control" placeholder="enter phone number" value=""></div>
-                    <div class="col-md-12"><label class="labels">Address</label><input type="text" class="form-control" placeholder="enter address" value=""></div>
-                    <div class="col-md-12"><label class="labels">Email ID</label><input type="text" class="form-control" placeholder="enter email id" value=""></div>
-                    <div class="col-md-12"><label class="labels">Education</label><input type="text" class="form-control" placeholder="education" value=""></div>
-                </div>
-                <div class="row mt-3">
-                    <div class="col-md-6"><label class="labels">Country</label><input type="text" class="form-control" placeholder="country" value=""></div>
-                    <div class="col-md-6"><label class="labels">State/Region</label><input type="text" class="form-control" value="" placeholder="state"></div>
-                </div>
-                <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button">Save Profile</button></div>
             </div>
-        </div>
-        <div class="col-md-4">
-            <div class="p-3 py-5">
-                <div class="d-flex justify-content-between align-items-center experience"><span>Edit Experience</span><span class="border px-3 p-1 add-experience"><i class="fa fa-plus"></i>&nbsp;Experience</span></div><br>
-                <div class="col-md-12"><label class="labels">Experience in Designing</label><input type="text" class="form-control" placeholder="experience" value=""></div> <br>
-                <div class="col-md-12"><label class="labels">Additional Details</label><input type="text" class="form-control" placeholder="additional details" value=""></div>
+            <div class="col-md-5 border-right">
+                <div class="p-3 py-5">
+                    <div class="d-flex justify-content-between align-items-center mb-3">
+                        <h4 class="text-right">Profile Settings</h4>
+                    </div>
+                    <div class="row mt-2">
+                        <div class="col-md-12"> {{ form.name | as_crispy_field }}</div>
+                    </div>
+                    <div class="row mt-3">
+                        <div class="col-md-12">{{ form.speciality | as_crispy_field }}</div>
+                        <div class="col-md-12">{{ form.present_hospital | as_crispy_field }}</div>
+                        <div class="col-md-12">{{ form.picture | as_crispy_field }}</div>
+
+                    </div>
+                    <div class="row mt-3">
+                        <div class="col-md-6">{{ form.expertize | as_crispy_field }}</div>
+                        <div class="col-md-6">{{ form.twitter | as_crispy_field }}</div>
+                        <div class="col-md-6">{{ form.facebook | as_crispy_field }}</div>
+                        <div class="col-md-6">{{ form.instagram | as_crispy_field }}</div>
+                    </div>
+                    <div class="mt-5 text-center">
+                        <button class="btn btn-primary profile-button" type="submit">Update Profile</button>
+                    </div>
+                </div>
             </div>
+            <div class="col-md-4">
+                <div class="p-3 py-5">
+                    <div class="d-flex justify-content-between align-items-center experience">
+                        <span>Present Address</span></div>
+                    <br>
+                    <div class="col-md-12">{{ form.division | as_crispy_field }}</div>
+                    <br>
+                    <div class="col-md-12">{{ form.district | as_crispy_field }}</div>
+                    <br>
+                    <div class="col-md-12">{{ form.upazila | as_crispy_field }}</div>
+                    <br>
+                    <div class="col-md-12">{{ form.post_code | as_crispy_field }}</div>
+                    <br>
+                    <div class="col-md-12">{{ form.address | as_crispy_field }}</div>
+                    <br>
+                </div>
+            </div>
+            </form>
         </div>
     </div>
 </div>
 </div>
-</div>
-
-
-
-
-
-
 
 
 </div>
+</form>
+{% endblock %}
+
+{% block extra_ja %}
+<script>
+function readURL(input) {
+    if (input.files && input.files[0]) {
+        var reader = new FileReader();
+        reader.onload = function (e) {
+            $('#imagePreview').attr('src', e.target.result);
+        }
+
+        reader.readAsDataURL(input.files[0]);
+    }
+}
+
+$("#id_picture").change(function(){
+    readURL(this);
+});
+
+</script>
+<script src="{% static 'custom/load_data.js' %}"></script>
 {% endblock %}
