--- a/templates/dashboard/profile/profile.html
+++ b/templates/dashboard/profile/profile.html
@@ -37,9 +37,8 @@
 
                     </div>
                     <div class="row mt-3">
-                        <div class="col-md-6">{{ form.expertize | as_crispy_field }}</div>
+                        <div class="col-md-12">{{ form.facebook | as_crispy_field }}</div>
                         <div class="col-md-6">{{ form.twitter | as_crispy_field }}</div>
-                        <div class="col-md-6">{{ form.facebook | as_crispy_field }}</div>
                         <div class="col-md-6">{{ form.instagram | as_crispy_field }}</div>
                     </div>
                     <div class="mt-5 text-center">
@@ -52,16 +51,19 @@
                     <div class="d-flex justify-content-between align-items-center experience">
                         <span>Present Address</span></div>
                     <br>
-                    <div class="col-md-12">{{ form.division | as_crispy_field }}</div>
+                    <div class="row">
+                        <div class="col-md-6">{{ form.division | as_crispy_field }}</div>
+                        <div class="col-md-6">{{ form.district | as_crispy_field }}</div>
+                    </div>
                     <br>
-                    <div class="col-md-12">{{ form.district | as_crispy_field }}</div>
-                    <br>
-                    <div class="col-md-12">{{ form.upazila | as_crispy_field }}</div>
-                    <br>
-                    <div class="col-md-12">{{ form.post_code | as_crispy_field }}</div>
+                    <div class="row">
+                        <div class="col-md-6">{{ form.upazila | as_crispy_field }}</div>
+                        <div class="col-md-6">{{ form.post_code | as_crispy_field }}</div>
+                    </div>
                     <br>
                     <div class="col-md-12">{{ form.address | as_crispy_field }}</div>
                     <br>
+                    <div class="col-md-12">{{ form.details | as_crispy_field }}</div>
                 </div>
             </div>
             </form>
