--- a/templates/dashboard/record/add_record.html
+++ b/templates/dashboard/record/add_record.html
@@ -1,58 +1,114 @@
 {% extends "dashboard/dashboard.html" %}
 {% load static %}
+{% load crispy_forms_tags %}
 {% block extra_css  %}
 <style>
     img.image-sise {
     width: 60%;
     margin: 0 25%
 }
+.inline.form.mb-4.row.inline-form {
+    display: grid;
+    grid-template-columns: 78% 0% 10%;
+    grid-gap: 4px;
+}
+i.fa.fa-trash.text-danger {
+    font-size: 25px;
+    margin-top: 23px;
+    margin-left: 30px;
+}
+.tile {
+    margin: auto;
+    width: 75%;
+}
+.django-ckeditor-widget {
+    margin-left: 2%;
+}
+.makecenter {
+      margin: 0 auto;
+      width: 15%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+}
+.form-group.padding-margin {
+    margin: 0 auto;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: inherit;
+}
+a.add-row.btn.btn-success {
+    width: 24%;
+}
 </style>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
+
+    <script type="text/javascript">
+        $(function () {
+            $(".inline.{{ file.prefix }}").formset({
+                prefix: "{{ file.prefix }}",
+                addCssClass: "add-row btn btn-success",
+                deleteCssClass: "delete-row",
+                addText: "Add Record",
+                deleteText: '<i class="fa fa-trash text-danger"></i>',
+                formCssClass: "inline-form",
+            });
+        });
+    </script>
 {% endblock extra_css %}
 
 
 {% block body  %}
 <div class="col-md-12">
-    <div class="tile">
-        <h3 class="tile-title">Bordered Table</h3>
-        <table class="table table-bordered">
-            <thead>
-            <tr>
-                <th>#</th>
-                <th>Name</th>
-                <th>Phone Number</th>
-                <th>Age</th>
-                <th>Time</th>
-                <th class="col-md-3 col-xs-1">Actions</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% if object_list %}
-            {% for object in object_list %}
-            <tr>
-                <td>{{ forloop.counter }}</td>
-                <td>{{ object.patient.patient_data.name }}</td>
-                <td>{{ object.patient.phone }}</td>
+        <form id="login" action="" enctype="multipart/form-data" class="form-register" method="POST" accept-charset="UTF-8">
+           {% csrf_token %}
+            <div class="tile">
+                <h3 class="tile-title">Add Record</h3>
+                <div class="makecenter">
+                    {{ form.media }}
+                    {{ form }}
 
-                <td>{{ object.patient.patient_data.age }}</td>
-                <td>{{ object.appointment_time }}</td>
-                <td class="col-md-3 col-xs-1">
-                    <a class="btn btn-outline-success" href="#">
-                        <i class="fa fa-clipboard"> Record </i>
-                    </a>
-                    <a class="btn btn-outline-primary" href="#">
-                        <i class="fa fa-plus-square-o" aria-hidden="true"> Add Record</i>
-                    </a>
+                </div>
 
-                </td>
-            </tr>
-            {% endfor  %}
-            {% else %}
-            </tbody>
-        </table>
-        <div class="image_div">
-         <img class="image-sise" src="{% static 'image/list.gif' %}">
+            <div>
+                <div class="modal-body">
+                    <div class="bloack-background p-4">
+                        <h5>Record File</h5>
+                        <div class="form-group padding-margin">
+                            {{ file.management_form }}
+                            {{ file.non_form_errors }}
+                            {% for form in file %}
+                             {{ form.id }}
+                                <div class="inline {{ file.prefix }} mb-4 row">
+                                    <div class="col-md-10">
+                                        <div class="row grid_for_all">
+                                            <div class="col-md-6 pr-0">
+                                                {{ form.file_name|as_crispy_field }}
+                                            </div>
+                                            <div class="col-md-6">
+                                                {{ form.document|as_crispy_field }}
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                    <div class="col-md-1">
+                                        {% if file.can_delete %}
+                                         {{ form.DELETE }}
+                                        {% endif %}
+                                    </div>
+                                </div>
+                            {% endfor %}
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+                      <button class="btn btn-primary profile-button makecenter" type="submit">Save</button>
         </div>
-        {% endif %}
-    </div>
+        </form>
 </div>
-{% endblock %}
+    {% endblock %}
