--- a/templates/dashboard/appointment/vistied.html
+++ b/templates/dashboard/appointment/vistied.html
@@ -35,11 +35,11 @@
 
                 <td>{{ object.patient.patient_data.age }}</td>
                 <td>{{ object.appointment_time }}</td>
-                <td class="col-md-3 col-xs-1">
-                    <a class="btn btn-outline-success" href="#">
-                        <i class="fa fa-clipboard"> Record </i>
+                 <td class="col-md-3 col-xs-1">
+                    <a class="btn btn-outline-success" href="{% url 'patient_ms:view_record' pk=object.patient.patient_data.pk %}">
+                        <i class="fa fa-clipboard">All Record </i>
                     </a>
-                    <a class="btn btn-outline-primary" href="#">
+                    <a class="btn btn-outline-primary" href="{% url 'patient_ms:add_record' pk=object.patient.patient_data.pk %}">
                         <i class="fa fa-plus-square-o" aria-hidden="true"> Add Record</i>
                     </a>
 
