--- a/templates/patient/update_patient.html
+++ b/templates/patient/update_patient.html
@@ -1,67 +1,36 @@
-{% extends 'base.html' %}
+{% extends 'patient/profile.html' %}
 {% load crispy_forms_tags %}
 {% load static %}
 
-{% block maincontent %}
+{% block nev_block %}
+<li><a href="{% url 'index' %}">Home</a></li>
+<li class="active">Profile Update</li>
+{%  endblock %}
+
 {% block style %}
-    <link rel="stylesheet" href="{% static 'custom/re_design.css' %}"/>
+<link rel="stylesheet" href="{% static 'custom/re_design.css' %}"/>
+<link rel="stylesheet" href="{% static 'custom/profile.css' %}"/>
+<style>
+  .inner-banner {
+    padding: 30px 0 30px !important;
+}
+.card-body {
+    padding: 0px 65px;
+}
+</style>
 {% endblock %}
-<!--inner banner-->
-<div class="inner-banner">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-7">
-        <h1>Contact</h1>
-      </div>
-      <div class="col-md-5">
-        <ol class="breadcrumb">
-          <li><a href="{% url 'index' %}">Home</a></li>
-          <li class="active">Contact</li>
-        </ol>
-      </div>
-    </div>
-  </div>
-</div>
-<!--inner banner End-->
 
-<!--Main Content Start-->
-<div class="main-content">
-  <div class="contact">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-7">
-
+{% block profile_block %}
         <form id="application_form" action="" enctype="multipart/form-data" class="form-register" method="POST" accept-charset="UTF-8"
           data-upazila-url={% url 'load_upazila' %} data-district-url={% url 'load_district' %}>
           {% csrf_token %}
-          <div class="contact-form">
-            {{  form|crispy }}
+          <div class="card-body">
+              {{ form | crispy }}
+              <button type="submit" class="item rotate-update-p">Update</button>
           </div>
 
-          <button type="submit" class="item rotate-update-p">Update</button>
         </form>
-        </div>
-        <div class="col-md-5">
-          <div class="contact-address">
-            <h5>Contact Information:</h5>
-            <ul>
-              <li> <span class="icon"><i class="fa fa-hospital-o" aria-hidden="true"></i></span> <span
-                  class="add-text">Cheryy Road, Wirral Road<br>
-                  Heart care Building,<br>
-                  United Kingdom</span> </li>
-              <li> <span class="icon"><i class="fa fa-phone" aria-hidden="true"></i> </span> <span class="add-text">+110
-                  9876 5433<br>
-                  +440 6589 9874</span> </li>
-              <li> <span class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i> </span> <span
-                  class="add-text"><strong>For Inquiry:</strong> info@heartcare.com</span> </li>
-              <li> <span class="icon"><i class="fa fa-globe" aria-hidden="true"></i> </span> <span
-                  class="add-text"><strong>For Details:</strong> www.Heartcare.com</span> </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<!--Main Content End-->
-{% endblock maincontent %}
+
+
+{%  endblock %}
+
