--- a/staticfiles/heartcare/css/custom.css
+++ b/staticfiles/heartcare/css/custom.css
@@ -10,7 +10,25 @@ html body {
 	color: #777777;
 	font-size: 14px;
 }
+.navbar-brand>img {
+    display: block;
+    width: 57px;
+}
+.nav-logo-area {
+    width: 100%;
+    float: left;
+    background: #fff;
+    padding: 30px 0;
+    position: relative;
+    z-index: 99;
+    box-shadow: 5px 0 10px rgb(113 9 9 / 77%) !important;
+}
 
+.ft-logo {
+    margin-bottom: 16px;
+    max-width: 44% !important;
+    height: auto;
+}
 p {
 	line-height: 24px;
 }
