--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3 col-sm-6">
-          <div class="widget"> <img class="ft-logo" src="{% static 'heartcare/images/footer-logo.png' %}" alt="">
+          <div class="widget"> <img class="ft-logo" src="{% static 'heartcare/images/logo.png' %}" alt="">
             <p>The Patient-Management-System have latest technology machines with experty Heart specialist doctors
               consectetur adipisicing elit. Distinctio vitae maiores enim ea atque? Natus iure autem cumque, quaerat
               distinctio pariatur velit illo hic a eos paccusamus. </p>
