--- a/templates/hospital/index.html
+++ b/templates/hospital/index.html
@@ -11,9 +11,9 @@
           <div class="col-md-6 col-sm-6">
             <div class="welcome-text">
               <div class="sectio-title-2"> <strong>Welcome to your</strong>
-                <h2>Heart Care</h2>
+                <h2>PM-System</h2>
               </div>
-              <p> The Heart Care Heart Hospital have latest technology machines with experty Heart specialist
+              <p> The PM-Syste Hospital have latest technology machines with experty Heart specialist
                 doctors consectetur adipisicing elit. Distinctio vitae maiores enim ea atque? Natus iure autem
                 cumque, quaerat distinctio pariatur velit illo hic a eos accusamus deleniti totam repellendus
                 reiciendis, nobis vero dolorem nesciunt officia facere perspiciatis fugiat.</p>
